crates/modor/tests/compilation/compile_fail/singleton_with_self_action_cyclic_dependency.rs
extern crate modor;

use modor::*;

struct Entity1;

#[singleton]
impl Entity1 {
    //~^ error: overflow evaluating the requirement `Entity2Action: Sized`
    #[run_after(component(Entity2))]
    fn f() {}
}

struct Entity2;

#[singleton]
impl Entity2 {
    #[run_after(component(Entity1))]
    fn f() {}
}

fn main() {}
